// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiTextAlign direction prop center is rendered 1`] = `
<div
  class="ouiTextAlign ouiTextAlign--center"
/>
`;

exports[`OuiTextAlign direction prop left is rendered 1`] = `
<div
  class="ouiTextAlign ouiTextAlign--left"
/>
`;

exports[`OuiTextAlign direction prop right is rendered 1`] = `
<div
  class="ouiTextAlign ouiTextAlign--right"
/>
`;

exports[`OuiTextAlign is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiTextAlign ouiTextAlign--left testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
